test/regress/coverage-item-lookup-h-break.test
; Test item_t::lookup break for 'h' prefix
2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format '%(has_foo)\n' -> 1
__ERROR__
While calculating format expression:
  has_foo
While evaluating value expression:
  has_foo
  ^^^^^^^
While handling posting from "$FILE", line 3:
>     Expenses:Food    $10.00
Error: Unknown identifier 'has_foo'
end test
